# OpenCTF-Emu

./: .gitignore  CMakeLists.txt  README.md  application.ccj  classes.dex
backup/src/: CFrame.cpp  CImageBank.cpp  COI.cpp  COIList.cpp  CRun.cpp  main.cpp
backup/src/include/: CFrame.h  CImageBank.h  COI.h  COIList.h  CRun.h  utils.h
images/: 1.raw  10.raw  100.raw  101.raw  102.raw  103.raw  104.raw  105.raw  106.raw  107.raw  108.raw  109.raw  11.raw  110.raw  111.raw  112.raw  113.raw  114.raw  115.raw  116.raw  117.raw  118.raw  119.raw  12.raw  120.raw  121.raw  122.raw  123.raw  124.raw  125.raw  126.raw  127.raw  128.raw  129.raw  13.raw  130.raw  131.raw  132.raw  133.raw  134.raw  (+626 more)
src/: CAnim.cpp  CAnimDir.cpp  CAnimHeader.cpp  CFrame.cpp  CImageBank.cpp  CLOList.cpp  COI.cpp  COIList.cpp  CObjectCommon.cpp  CRender.cpp  CRun.cpp  main.cpp
src/include/: CAnim.h  CAnimDir.h  CAnimHeader.h  CChunk.h  CFrame.h  CImage.h  CImageBank.h  CLO.h  CLOList.h  CLayer.h  COI.h  COIList.h  CObjectCommon.h  CRender.h  CRun.h  utils.h
